# alialescoulie.com

./: .gitignore  CNAME  Cargo.toml  build.py  flake.nix  index.html  pyproject.toml  styles.css  test.py
.github/workflows/: build_deploy.nix  static.yml
alialescoulie/: 404.html  Gemfile  _config.yml
alialescoulie/_includes/: navbar.html
alialescoulie/_posts/: 2022-02-20-new-site.md  2022-02-20-welcome-to-jekyll.markdown
py_src/: __init__.py
site_out/: about.html  index.html  projects.html
site_out/static/: styles.css
sitegen/: __init__.py  build.py  main.py
sitegen/blog_posts/mdsapt_intro/: mdsapt.md  post.json
sitegen/projects/faraday/: faraday.md  proj.json
sitegen/projects/mdsapt/: mdsapt.md  proj.json
sitegen/site_src/: about.html.jinja  games.html.jinja  gnu_linux.html  index.html.jinja
sitegen/site_src/games/: conn4.html.jinja  games.html.jinja
sitegen/site_src/static/: styles.css
sitegen/templates/: blog.html.jinja  header.html.jinja  navbar.html.jinja  post_block.html.jinja  project_block.html.jinja  project_page.html.jinja  tag.html.jinja
sitegen/tests/: test.py
sitegen/tests/site/: about.html  projects.html  under_construction.html
sitegen/tests/src/: projects.html.jinja
src/: about.html.jinja  index.html.jinja  lib.rs  projects.html.jinja  under_construction.html.jinja
static/: styles.css
templates/: header.html.jinja  navbar.html.jinja
tests/src/: about.html.jinja
tests/templates/: blog.html.jinja  navbar.html.jinja
tests/test_posts/post1/: post.json  post1.ipynb
tests/test_posts/post2/: post.json  post2.tex
(+12 files in other folders)
