[tool.poetry]
name = "alialescoulie-com"
version = "0.1.0"
description = "My personal website"
authors = ["Alia Lescoulie <alia.lescoulie@gmail.com>"]
readme = "README.md"
packages = [{include = "alialescoulie"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pandoc = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
